fix: VerifierUi exception code length overflow - EUDIW-734

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,6 @@ main {
 
 html, body { height: 100%; }
 body { font-family: Roboto, "Helvetica Neue", sans-serif; margin: 0; }
+
+html, body { height: 100%; }
+body { font-family: Roboto, "Helvetica Neue", sans-serif; margin: 0; }
